# code-of-conduct

./: .gitignore  .python-version  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  techstack.md  techstack.yml
.github/: CODEOWNERS
.github/workflows/: contributors.yml  generate-readme-local.yml  generate-readme-remote.yml  generate-readme.yml  toc.yml  update-website.yml
code-of-conduct/sections/: 1.toml  2.toml  3.toml
code_of_conduct/: __init__.py  __main__.py
code_of_conduct/sections/: 1.toml  2.toml  3.toml  section1.toml
code_of_conduct/templates/: README.md.jinja
src/: __init__.py
src/code_of_conduct/: __init__.py
src/code_of_conduct/sections/: 1.toml
src/code_of_conduct/templates/: README.md.jinja
