[project]
name = "code_of_conduct"
version = "2025.06.1"
description = "Generates the Code of Conduct for ATL"
authors = [
    { name = "Artur Manuel", email = "amad@atl.tools" },
]
requires-python = ">=3.11"
dependencies = ["jinja2 (>=3.1.6,<4.0.0)", "ruff (>=0.12.0,<0.13.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gencoc = "code_of_conduct:main"
