[project]
name = "code_of_conduct"
version = "2025.09.22"
description = "Generates the Code of Conduct for ATL"
authors = [
    { name = "Artur Manuel", email = "amad@atl.tools" },
    { name = "Atmois", email = "atmois@allthingslinux.org"}
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.1",
]

[project.scripts]
gencoc = "code_of_conduct:main"
gencoc-test = "code_of_conduct:main_test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
